# ut

./: fdf  simple  test  test2  test5
backup/: fds  hktest  javasample  tex222  txt
backup3/: second2
java/: 3  bdgfd  bvcb  config  demo2  demo4  dgfd  dhhd  documentaion  email  fsfsd  gfhgf  ghfh  hh  hk  hktest  (+33 more)
src/airflow/SST/: Pipfile  init_db.bat  pyproject.toml  requirements.txt  setup.py
src/airflow/SST/d3gen/: config.py
src/airflow/SST/d3gen/core/domain/: services.py
src/airflow/SST/d3gen/core/domain/model/: exceptions.py  models.py
src/airflow/SST/d3gen/core/ports/: interfaces.py
src/airflow/SST/dag_generator/: Dynamic-DAGEngine.py  abc.json  dags.db  explejson2.json.py  run.py
src/airflow/SST/dag_generator/application/services/: generator.py
src/airflow/SST/dag_generator/core/domain/: exceptions.py  models.py
src/airflow/SST/dag_generator/core/ports/: interfaces.py
src/airflow/SST/dag_generator/examples/sql/: init_db.sql  sample_data.sql
src/airflow/SST/dag_generator/examples/templates/: dag.py.j2  python-operator.j2
src/airflow/SST/dag_generator/generated_dags/: example_dag.py
src/airflow/SST/dag_generator/generated_dags/operators/: process_data_operator.py  send_report_operator.py
src/airflow/SST/dag_generator/infrastructure/persistence/: sqlite_repository.py
src/airflow/SST/dag_generator/infrastructure/storage/: local_storage.py
src/airflow/SST/dag_generator/infrastructure/templating/: jinja_engine.py
src/airflow/SST/dag_generator/templates/: python_operator.j2
src/airflow/SST/dag_generator/test-template/: bashTest.py
(+582 files in other folders)
